manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimalrecords-service
spec:
  selector:
    app: minimalrecords
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32010
  type: NodePort
