manifests/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: minimalrecords-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - java-mouse.ru
      secretName: spring-app-tls
  rules:
    - host: java-mouse.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minimalrecords-service
                port:
                  number: 80
